--- a/about.html
+++ b/about.html
@@ -16,6 +16,9 @@
                 <li>
                    <a href="index.html" >Main</a>
                 </li>
+                <li>
+                    <a href="about.html" >About</a>
+                </li>
             </ul>
         </nav>
 
