--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
         <nav>
             <ul>
                 <li>
-                   <a href="index.html" >Main</a>
+                   <a class="active" href="index.html" >Main</a>
                 </li>
                 <li>
                     <a href="about.html" >About</a>
+                </li>
+                <li>
+                    <a href="arcade.html" >Arcade</a>
                 </li>
             </ul>
         </nav>
