just a few changes

--- a/arcade.html
+++ b/arcade.html
@@ -29,7 +29,22 @@
             Arcade
         </h1>
         <p>
-            So as my first project of Electronics 20, me and Kayden built this arcade machine to run emulators. It uses some old school computer as a base and the emulators are on Retroarch for simplicity of the end user. The machine runs on Arch Linux, partially because it's a very light distro and partially because it's entertaining to install. 
+            So as my first project of Electronics 20, me and Kayden built this arcade machine to run emulators. It uses some old school computer as a base and the emulators are on Retroarch for simplicity. The machine runs on Arch Linux, partially because it's a very light distro and partially because it's entertaining to install.
         </p>
+        <h2>
+            Resources Used
+        </h2>
+        <ul>
+            <li>
+                <a href="https://archlinux.org/">
+                    Arch Linux
+                </a>
+            </li>
+            <li>
+                <a href="https://www.retroarch.com/">
+                    Retroarch
+                </a>
+            </li>
+        </ul>
     </body>
 </html>
