--- a/arcade.html
+++ b/arcade.html
@@ -29,7 +29,7 @@
             Arcade
         </h1>
         <p>
-            So as my first project of Electronics 20, me and Kayden built this arcade machine to run emulators. It uses some old school computer as a base and the emulators are on Retroarch for simplicity. The machine runs on Arch Linux, partially because it's a very light distro and partially because it's entertaining to install.
+            So as my first project of Electronics 20, me and Kayden built this arcade machine to run emulators. It uses some old school computer as a base and the emulators are on Retroarch for simplicity. The machine runs on Arch Linux, partially because it's a very light distro and partially because it's entertaining to install. I also installed LXQt on it as a desktop enviroment, as it's light while still offering a Windows style experience so that maitenance is easier.
         </p>
         <h2>
             Resources Used
