--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
         <h1>
             MAIN
         </h1>
+        <h2>
+            Arcade
+        </h2>
         <p>
-            :website
+            One of my first projects this year was an arcade to play emulated games on in Electronics.
         </p>
+        <a href="arcade.html">
+            Read more
+        </a>
     </body>
 </html>
