--- a/turtle.html
+++ b/turtle.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-witdh, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <title>
-            Arcade
+            Turtle
         </title>
 
     </head>
@@ -20,7 +20,10 @@
                     <a href="about.html" >About</a>
                 </li>
                 <li>
-                    <a class="active" href="arcade.html" >Arcade</a>
+                    <a class="active">Arcade</a>
+                </li>
+                <li>
+                    <a class="active" href="turtle.html" >Turtle</a>
                 </li>
             </ul>
         </nav>
