--- a/turtle.html
+++ b/turtle.html
@@ -20,7 +20,7 @@
                     <a href="about.html" >About</a>
                 </li>
                 <li>
-                    <a class="active">Arcade</a>
+                    <a href="arcade.html" >Arcade</a>
                 </li>
                 <li>
                     <a class="active" href="turtle.html" >Turtle</a>
