some work i did

--- a/about.html
+++ b/about.html
@@ -22,6 +22,9 @@
                 <li>
                     <a href="arcade.html" >Arcade</a>
                 </li>
+                <li>
+                    <a href="turtle.html" >Turtle</a>
+                </li>
             </ul>
         </nav>
 
