--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <li>
                     <a href="arcade.html" >Arcade</a>
                 </li>
+                <li>
+                    <a href="turtle.html" >Turtle</a>
+                </li>
             </ul>
         </nav>
 
@@ -37,5 +40,18 @@
         <a href="arcade.html">
             Read more
         </a>
+        <div>
+            <h2>
+                Turtle
+            </h2>
+            <p>
+                One of my CS20 projects where I made a cube spin and bounce using PyGLM and the turtle module.
+            </p>
+            <img src="turtle.png" alt="The cube bouncing around">
+            <br>
+            <a href="turtle.html">
+                Read more
+            </a>
+        </div>
     </body>
 </html>
