--- a/turtle.html
+++ b/turtle.html
@@ -29,28 +29,24 @@
         </nav>
 
         <h1>
-            Arcade
+            Turtle
         </h1>
         <p>
-            So as my first project of Electronics 20, me and Kayden built this arcade machine to run emulators. It uses some old school computer as a base and the emulators are on Retroarch for simplicity. The machine runs on Arch Linux, partially because it's a very light distro and partially because it's entertaining to install. I also installed LXQt on it as a desktop enviroment, as it's light while still offering a Windows style experience so that maitenance is easier.
+            For my python turtle assignment I used PyGLM to create a spinning cube that bounces around. PyGLM is a library that adds GLM math functions to python so that I could use matrix multiplication and vectors to get the coordinates of the cube so that I could just use the turtle to draw. There is an issue where for whatever reason it uses an orthographic projection as opposed to perspective, which makes distance not really work in this. But it's not really visible in this particular demo.
         </p>
         <h2>
             Resources Used
         </h2>
+        <img src="turtle.png" alt="The cube bouncing around">
         <ul>
             <li>
-                <a href="https://archlinux.org/">
-                    Arch Linux
+                <a href="https://pypi.org/project/PyGLM/">
+                    PyGLM
                 </a>
             </li>
             <li>
-                <a href="https://www.retroarch.com/">
-                    Retroarch
-                </a>
-            </li>
-            <li>
-                <a href="https://lxqt-project.org/">
-                    LXQt
+                <a href="https://github.com/bahrr/turtle_project.git">
+                    Source Code
                 </a>
             </li>
         </ul>
