added some more stuff

--- a/arcade.html
+++ b/arcade.html
@@ -32,7 +32,7 @@
             Arcade
         </h1>
         <p>
-            So as my first project of Electronics 20, me and Kayden built this arcade machine to run emulators. It uses some old school computer as a base and the emulators are on Retroarch for simplicity. The machine runs on Arch Linux, partially because it's a very light distro and partially because it's entertaining to install. I also installed LXQt on it as a desktop enviroment, as it's light while still offering a Windows style experience so that maitenance is easier.
+            So as my first project of Electronics 20, me and Kayden built this arcade machine to run emulators. It uses some old school computer as a base and the emulators are on Retroarch for simplicity. The machine runs on Arch Linux, partially because it's a very light distro and partially because it's entertaining to install. I also installed LXQt on it as a desktop enviroment, as it's light while still offering a Windows style experience so that maitenance is easier. The emulator used for most games is Finalburn Neo as it just works with most arcade games.
         </p>
         <h2>
             Resources Used
@@ -51,6 +51,11 @@
             <li>
                 <a href="https://lxqt-project.org/">
                     LXQt
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/finalburnneo/FBNeo">
+                    Finalburn Neo
                 </a>
             </li>
         </ul>
