--- a/index.html
+++ b/index.html
@@ -27,19 +27,20 @@
                 </li>
             </ul>
         </nav>
-
-        <h1>
-            MAIN
-        </h1>
-        <h2>
-            Arcade
-        </h2>
-        <p>
-            One of my first projects this year was an arcade to play emulated games on in Electronics.
-        </p>
-        <a href="arcade.html">
-            Read more
-        </a>
+        <div>
+            <h1>
+                MAIN
+            </h1>
+            <h2>
+                Arcade
+            </h2>
+            <p>
+                One of my first projects this year was an arcade to play emulated games on in Electronics.
+            </p>
+            <a href="arcade.html">
+                Read more
+            </a>
+        </div>
         <div>
             <h2>
                 Turtle
